fixed spacing on top and for small viewports

--- a/css/about.css
+++ b/css/about.css
@@ -175,4 +175,7 @@ body {
   .active {
     display: block;
   }
+  .intro {
+    margin: 20vh 2vw;
+  }
 }
